@@ -1,5 +1,10 @@
 2008-01-11  Guido Diepen  <guido@guidodiepen.nl>
 
+	* Added a non-blocking CeWriteFile (it will release GIL before starting)
+	* Added a non-blocking CeProcessConfig ( not used yet though )
+
+2008-01-11  Guido Diepen  <guido@guidodiepen.nl>
+
 	* Increased the timeout used for reading data from the socket. Old value
 	  of 15 was causing too many timeouts. New value is set to 120 seconds.
 
